fix(swiper): fractional slides + scrollbar

--- a/src/components/faq/Faq.module.scss
+++ b/src/components/faq/Faq.module.scss
@@ -1,6 +1,10 @@
 @import '../../styles/mixins';
 @import '../../styles/global';
 
+details > summary::-webkit-details-marker { 
+	display: none;       
+  }
+
 
 .faq {
 	max-width: 767px;
