--- a/src/components/reviews/Reviews.module.scss
+++ b/src/components/reviews/Reviews.module.scss
@@ -152,6 +152,7 @@
 	  justify-content: space-between;
 	  align-items: center;
 	  gap: 9px;
+	  margin: 0 auto;
 	}
 
 	@media (min-width: $breakpoint-xl) {
